Polished implementations.
Signed-off-by: yordantsintsov <yordan.tsintsov@gmail.com>